@@ -4,7 +4,7 @@
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
 .\"      Date: 03/19/2011
 .\"    Manual: \ \&
-.\"    Source: \ \& 1.0.0
+.\"    Source: \ \& 1.0.1-dev
 .\"  Language: English
 .\"
 .TH "MCABBER" "1" "03/19/2011" "\ \& 0\&.10\&.4\-dev\" "\ \&"
